--- a/package.json
+++ b/package.json
@@ -25,24 +25,23 @@
   "version": "0.0.26-9",
   "dependencies": {
     "@babel/cli": "^7.15.4",
-    "@babel/core": "^7.15.4",
+    "@babel/core": "^7.15.5",
     "@babel/plugin-syntax-import-meta": "^7.10.4",
-    "@babel/preset-env": "^7.15.4",
+    "@babel/preset-env": "^7.15.6",
     "@pwn/is": "^1.0.2",
     "@virtualpatterns/babel-plugin-mablung-replace-identifier": "0.0.26-4",
     "@virtualpatterns/babel-plugin-mablung-replace-string-literal": "0.0.26-4",
     "@virtualpatterns/babel-preset-mablung-makefile": "0.0.26-33",
     "@virtualpatterns/eslint-config-mablung-makefile": "0.0.26-39",
-    "@virtualpatterns/mablung-makefile": "0.0.26-81",
+    "@virtualpatterns/mablung-makefile": "0.0.26-84",
     "@virtualpatterns/mablung-source-map-support": "0.0.26-18",
-    "commander": "^8.1.0",
+    "commander": "^8.2.0",
     "fs-extra": "^10.0.0",
     "shx": "^0.3.3"
   },
   "devDependencies": {
-    "@virtualpatterns/mablung-check-dependency": "0.0.26-11",
-    "@virtualpatterns/mablung-worker": "0.0.2-40",
-    "ava": "^3.15.0",
-    "shelljs": "^0.8.4"
+    "@virtualpatterns/mablung-check-dependency": "0.0.26-14",
+    "@virtualpatterns/mablung-worker": "0.0.2-47",
+    "ava": "^3.15.0"
   }
 }
