--- a/.c8rc.json
+++ b/.c8rc.json
@@ -6,10 +6,11 @@
     "release/test/command/resource/target-1/get-header.js",
     "ava.config.cjs"
   ],
+  "reportDir": "data/c8", 
   "reporter": [
     "html",
     "text-summary"
   ],
   "src": "release",
-  "tempDirectory": "data/coverage"
+  "tempDirectory": "data/cache/c8"
 }
