--- a/.c8rc.json
+++ b/.c8rc.json
@@ -1,7 +1,7 @@
 {
   "all": true,
   "exclude": [
-    "ava.config.cjs",
+    "ava.config.js",
     "release/commonjs/sandbox",
     "release/commonjs/test/resource/copy",
     "release/esmodule/sandbox",
