--- a/include/build
+++ b/include/build
@@ -1,7 +1,9 @@
 
+include $(mablung-makefile-path)/include/build
+
 ifndef current-clean-folder
 
-include $(mablung-makefile-path)/include/build
+export build-ignore := .DS_Store .babelrc.json .eslintrc.json
 
 ifeq ($(findstring source/esmodule,$(current-build-folder)),source/esmodule)
 
@@ -23,28 +25,34 @@ release/%.create:
 	$(if $(verbose),@echo create .... $(patsubst release/esmodule/%,release/commonjs/%,$(patsubst %.create,%,$@)))
 	@npx shx mkdir -p $(patsubst release/esmodule/%,release/commonjs/%,$(patsubst %.create,%,$@))
 
-release/commonjs/.DS_Store: source/esmodule/.DS_Store
-	$(if $(verbose),@echo ignore .... $<)
-release/commonjs/%/.DS_Store: source/esmodule/%/.DS_Store
-	$(if $(verbose),@echo ignore .... $<)
-release/commonjs/.babelrc.json: source/esmodule/.babelrc.json
-	$(if $(verbose),@echo ignore .... $<)
-release/commonjs/%/.babelrc.json: source/esmodule/%/.babelrc.json
-	$(if $(verbose),@echo ignore .... $<)
-release/commonjs/.eslintrc.json: source/esmodule/.eslintrc.json
-	$(if $(verbose),@echo ignore .... $<)
-release/commonjs/%/.eslintrc.json: source/esmodule/%/.eslintrc.json
-	$(if $(verbose),@echo ignore .... $<)
+# release/commonjs/.DS_Store: source/esmodule/.DS_Store
+# 	$(if $(verbose),@echo ignore .... $<)
+# release/commonjs/%/.DS_Store: source/esmodule/%/.DS_Store
+# 	$(if $(verbose),@echo ignore .... $<)
+# release/commonjs/.babelrc.json: source/esmodule/.babelrc.json
+# 	$(if $(verbose),@echo ignore .... $<)
+# release/commonjs/%/.babelrc.json: source/esmodule/%/.babelrc.json
+# 	$(if $(verbose),@echo ignore .... $<)
+# release/commonjs/.eslintrc.json: source/esmodule/.eslintrc.json
+# 	$(if $(verbose),@echo ignore .... $<)
+# release/commonjs/%/.eslintrc.json: source/esmodule/%/.eslintrc.json
+# 	$(if $(verbose),@echo ignore .... $<)
 
-release/commonjs/%.cjs: export NODE_ENV := commonjs
+$(foreach	item,\
+					$(build-ignore),\
+					$(eval release/commonjs/$(item):source/esmodule/$(item);$(if $(verbose),@echo ignore .... $$<)))
+
+$(foreach	item,\
+					$(build-ignore),\
+					$(eval release/commonjs/%/$(item):source/esmodule/%/$(item);$(if $(verbose),@echo ignore .... $$<)))
+
 release/commonjs/%.cjs: source/esmodule/%.cjs
-	@echo compile ... $@ $(babel-parameter)
-	@npx babel $< --out-file $@ --source-maps true $(babel-parameter)
+	@echo compile ... $@ $(babel-parameter) --env-name from-esmodule-to-commonjs
+	@npx babel $< --out-file $@ --source-maps true $(babel-parameter) --env-name from-esmodule-to-commonjs
 
-release/commonjs/%.cjs: export NODE_ENV := commonjs
 release/commonjs/%.cjs: source/esmodule/%.js
-	@echo compile ... $@ $(babel-parameter)
-	@npx babel $< --out-file $@ --source-maps true $(babel-parameter)
+	@echo compile ... $@ $(babel-parameter) --env-name from-esmodule-to-commonjs
+	@npx babel $< --out-file $@ --source-maps true $(babel-parameter) --env-name from-esmodule-to-commonjs
 
 release/commonjs/%: source/esmodule/%
 	@echo copy ...... $@
@@ -71,8 +79,5 @@ release/esmodule.create:
 	@npx shx mkdir -p $(subst release/esmodule,release/commonjs,$(patsubst %.create,%,$@))
 
 endif
-
-release/%.cjs: export NODE_ENV := commonjs
-release/%.js: export NODE_ENV := esmodule
 
 endif
